--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "gulp build",
     "start": "node dist/magnitude.js",
 		"test": "npm run build && npm run start",
-		"prepare": "gulp build"
+		"prepare": "gulp compile"
   },
   "keywords": [
     "Bot",
