--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "magnitude",
   "version": "0.0.1",
   "description": "Music Bot for Discord",
-  "main": "dist/main.js",
+	"main": "dist/main.js",
+	"engines": {
+		"node": "10.15.0",
+		"npm": "6.4.1"
+	},
   "scripts": {
     "build": "gulp build",
     "start": "node dist/magnitude.js",
