--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "gulp build",
     "start": "node dist/magnitude.js",
-    "test": "npm run build && npm run start"
+		"test": "npm run build && npm run start",
+		"prepare": "gulp compile"
   },
   "keywords": [
     "Bot",
