--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "npm": "6.4.1"
   },
   "scripts": {
-		"build": "gulp build",
+    "build": "gulp build",
     "start": "node dist/magnitude.js",
-    "build-start": "npm run build && npm run start"
+		"build-start": "npm run build && npm run start",
+		"prepare": "npm run build"
   },
   "keywords": [
     "Bot",
