--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/magnitude.js",
   "types": "dist/magnitude.d.ts",
   "engines": {
-    "node": "12.0.0",
-    "npm": "6.4.1"
+    "node": "12.*",
+    "npm": "6.*"
   },
   "scripts": {
     "build": "gulp build",
