--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "author": "Damon",
   "license": "Apache-2.0",
   "dependencies": {
-    "@discord-yuh/standard": "github:discord-yuh/standard",
+		"@discord-yuh/standard": "github:discord-yuh/standard",
+		"@discord-yuh/core": "githun:discord-yuh/core",
     "discord.js": "^11.4.2",
     "lavalink": "^2.3.1",
     "node-fetch": "^2.3.0"
